--- a/prototypes/highFidelity/maps/templates/maps/index.html
+++ b/prototypes/highFidelity/maps/templates/maps/index.html
@@ -3,8 +3,9 @@
   <head>
     <title>Simple Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script src="./index.js"></script>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href={% static 'maps/style.css' %} />
+    <script src="{% static 'maps/index.js' %}"></script>
   </head>
   <body>
     <div id="map"></div>
