--- a/htmlTemplate/assets/css/main.css
+++ b/htmlTemplate/assets/css/main.css
@@ -123,7 +123,7 @@
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #00263A;
+		color: #fff;
 		text-decoration: none;
 	}
 
@@ -3304,7 +3304,7 @@
 
 	#cta {
 		background: #00263A;
-		color: #f9e6df;
+		color: #fff;
 		padding: 3.5em 0 4em 0;
 		text-align: center;
 	}
