--- a/genie/web/templates/web/reserveSpot.html
+++ b/genie/web/templates/web/reserveSpot.html
@@ -29,7 +29,7 @@
 					<nav id="nav">
 						<ul>
 							<!-- TODO: add links to main and account -->
-							<li><a href="main.html">Home</a></li>
+							<li><a href={% url "web:main" %}>Home</a></li>
 							<li><a href="account.html" class="button">My Account</a></li>
 							<li><a href={% url "web:home" %} class="button">Log Out</a></li>
 						</ul>
