--- a/genie/web/templates/web/signUp.html
+++ b/genie/web/templates/web/signUp.html
@@ -35,7 +35,7 @@
 					<p>Reserve parking spots for Utah State University events</p>
 					<ul class="actions special">
 						<li><a href="#cta" class="button">Sign Up</a></li>
-						<li><a href="login.html" class="button">Login</a></li>
+						<li><a href={% url "web:login" %} class="button">Login</a></li>
 					</ul>
 				</section>
 
