--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -27,12 +27,12 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="main.html">Big Blue's Parking Genie</a></h1>
+					<h1><a href={% url "web:main" %}>Big Blue's Parking Genie</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>	
 							<li><a href={% url "web:main" %}>Home</a></li>
-							<li><a href="account.html" class="button">My Account</a></li>
+							<li><a href={% url "web:account" %} class="button">My Account</a></li>
 							<li><a href={% url "web:home" %} class="button">Log Out</a></li>
 						</ul>
 					</nav>
