Fixed faulty image link in signUp

--- a/genie/web/templates/web/signUp.html
+++ b/genie/web/templates/web/signUp.html
@@ -78,7 +78,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><img src={% static "images/terrace.jpg"%} alt="" /></span>
+								<span class="image featured"><img src={% static "web/images/terrace.jpg"%} alt="" /></span>
 								<h3>Remember your Favorite Spots</h3>
 								<p>See all your past reservations from within your account, making it easy to attend again.</p>
 								<ul class="actions special">
