--- a/genie/web/templates/web/signUp.html
+++ b/genie/web/templates/web/signUp.html
@@ -34,7 +34,7 @@
 					<h2>Big Blue's Parking Genie</h2>
 					<p>Reserve parking spots for Utah State University events</p>
 					<ul class="actions special">
-						<li><a href="#cta" class="button">Sign Up</a></li>
+						<li><a href="{% url 'web:home' %}#cta" class="button">Sign Up</a></li>
 						<li><a href={% url "web:login" %} class="button">Login</a></li>
 					</ul>
 				</section>
