Added lotInfo.html and lotManagement.html to Django

--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -190,7 +190,7 @@
 									<h3>Manage my Parking Lots</h3>
 									<p>Assign new attendants; manage parking types and prices.</p>
 									<ul class="actions special">
-										<li><a href="lotManagement.html" class="button special">See my parking lots</a></li>
+										<li><a href={% url "web:lots" %} class="button special">See my parking lots</a></li>
 									</ul>
 								</section>
 
