Added sign up functionality and logout to each template

--- a/genie/web/templates/web/reserveSpot.html
+++ b/genie/web/templates/web/reserveSpot.html
@@ -30,8 +30,8 @@
 						<ul>
 							<!-- TODO: add links to main and account -->
 							<li><a href={% url "web:main" %}>Home</a></li>
-							<li><a href="account.html" class="button">My Account</a></li>
-							<li><a href={% url "web:home" %} class="button">Log Out</a></li>
+							<li><a href={% url "web:account" %} class="button">My Account</a></li>
+							<li><a href={% url "web:logout" %} class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
