--- a/genie/web/templates/web/account.html
+++ b/genie/web/templates/web/account.html
@@ -29,7 +29,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href={% url "web:main" %}>Home</a></li>
-							<li><a href={% url "web:home" %} class="button">Log Out</a></li>
+							<li><a href={% url "web:logout" %} class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
