--- a/genie/web/templates/web/eventManagement.html
+++ b/genie/web/templates/web/eventManagement.html
@@ -30,7 +30,7 @@
 						<ul>
 							<li><a href={% url "web:main" %}>Home</a></li>
 							<li><a href={% url "web:account" %} class="button">My Account</a></li>
-							<li><a href={% url "web:home" %} class="button">Log Out</a></li>
+							<li><a href={% url "web:logout" %} class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
