--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -33,7 +33,7 @@
 							<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>	
 							<li><a href={% url "web:main" %}>Home</a></li>
 							<li><a href={% url "web:account" %} class="button">My Account</a></li>
-							<li><a href={% url "web:home" %} class="button">Log Out</a></li>
+							<li><a href={% url "web:logout" %} class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
