--- a/genie/web/templates/web/signUp.html
+++ b/genie/web/templates/web/signUp.html
@@ -97,6 +97,9 @@
 					<h2>Sign up for an account</h2>
 					<p>Create an account with Big Blue's Parking Genie to reserve parking for USU events.</p>
 
+					{% if message != "" %}
+						<p style="color:red;">{{message}}</p>
+					{% endif %}
 					<form method="post" action={% url "web:signUp" %}>
 						{% csrf_token %}
 						<div class="row gtr-50 gtr-uniform">
