--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -39,7 +39,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section id="banner" style="background-image: url('images/overlay.png'), url({% static 'web/images/banner.jpg' %});">
 					<h2>My Parking</h2>
 				</section>
 
