--- a/genie/web/templates/web/login.html
+++ b/genie/web/templates/web/login.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href={% url "web:home" %}>Home</a></li>
-							<li><a href={% url "web:home" %} class="button">Sign Up</a></li>
+							<li><a href="{% url 'web:home' %}#cta" class="button">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -36,7 +36,7 @@
 						{% if message != "" %}
 							<p style="color:red">{{message}}</p>
 						{% endif %}
-						<form method="post" action={% url "web:signIn" %}>
+						<form method="post" action={% url 'web:signIn' %}>
 							{% csrf_token %}
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-12">
