--- a/genie/web/templates/web/signUp.html
+++ b/genie/web/templates/web/signUp.html
@@ -62,6 +62,49 @@
 						<header class="major">
 							<h2>Upcoming Utah State Events</h2>
 							<br />
+							<div id="monthTitle"></div>
+							<script>
+								//Get and display current Month
+								var staticTitle = document.createElement('h4');
+								var d = new Date();
+								var month = new Array();
+								month[0] = "January";
+								month[1] = "February";
+								month[2] = "March";
+								month[3] = "April";
+								month[4] = "May";
+								month[5] = "June";
+								month[6] = "July";
+								month[7] = "August";
+								month[8] = "September";
+								month[9] = "October";
+								month[10] = "November";
+								month[11] = "December";
+								var month = month[d.getMonth()];
+								var titleText = document.createTextNode(month);
+								staticTitle.appendChild(titleText);
+								document.getElementById('monthTitle').insertBefore(staticTitle, document.getElementById('eventTable'));
+							</script>
+							<div id="eventTable" class="table-wrapper">
+									<table>
+										<thead>
+											<tr>
+												<th>Name</th>
+												<th>Description</th>
+												<th>Date/Time</th>
+											</tr>
+										</thead>
+										<tbody>
+										{% for event in events %}
+											<tr>
+												<td>{{ event.name }}</td>
+												<td>{{ event.description|truncatewords:25 }}</td>
+												<td>{{ event.date }}</td>
+											</tr>
+										{% endfor %}
+										</tbody>
+									</table>
+								</div>
 						</header>
 					</section>
 
