Fixed fontawesome arrow icon on main Django page

--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -21,6 +21,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href={% static "web/assets/css/main.css" %}/>
 		<link rel='icon' href={% static 'web/images/favicon.ico' %} type='image/x-icon' />
+		{% block style %}
+        <link rel="stylesheet" type="text/css" href="{% static "web/assets/css/fontawesome-all.min.css" %}" />
+	    {% endblock %}
 	</head>
 	<body class="landing is-preload">
 		<div id="page-wrapper">
