--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -151,7 +151,7 @@
 										<p class="col-4"><a href="">Reservation Code</a></p>
 									</div>
 								</li>
-								<li><a href="pastReservations.html" class="button special fit">See all past reservations</a></li>
+								<li><a href={% url "web:history" %} class="button special fit">See all past reservations</a></li>
 							</ul>
 						</section>
 					</div>
@@ -164,17 +164,16 @@
 								<h3>Check In Customers</h3>
 								<div class="col-12">
 									<select name="category" id="category">
-										<option value="">- Select Event -</option>
+										<option value="">Select Event</option>
 										<!-- TODO: add events -->
-										<option value="1">1</option>
-										<option value="1">2</option>
-										<option value="1">3</option>
-										<option value="1">4</option>
+										{% for event in events %}
+											<option value="{{ event.id }}">{{ event.name }} | {{ event.date }}</option>
+										{% endfor %}
 									</select>
 								</div>
 								<br />
 								<ul class="actions special">
-									<li><a href="#" class="button special">Fill Event Reservations</a></li>
+									<li><a href={% url "web:attendant" %} class="button special">Fill Event Reservations</a></li>
 								</ul>
 						</section>
 					</div>
@@ -201,22 +200,18 @@
 									<span class="image featured"><img src={% static "web/images/sunset.jpg" %} alt="" /></span>
 									<h3>View current lot reservations</h3>
 									<div class="col-12">
-										<select name="category" id="category">
-											<option value="">- Select Event -</option>
-											<!-- TODO: add events-->
-											<option value="1">1</option>
-											<option value="1">2</option>
-											<option value="1">3</option>
-											<option value="1">4</option>
+										<select name="category" id="eventOwnerCategory">
+											<option value="">Select Event</option>
+											{% for event in events %}
+												<option value="{{ event.id }}">{{ event.name }} | {{ event.date }}</option>
+											{% endfor %}
 										</select>
 										<br />
-										<select name="category" id="category">
-											<option value="">- Select Parking Lot -</option>
-											<!-- TODO: add lots-->
-											<option value="1">1</option>
-											<option value="1">2</option>
-											<option value="1">3</option>
-											<option value="1">4</option>
+										<select name="category" id="lotOwnerCategory">
+											<option value="">Select Parking Lot</option>
+											{% for lot in lots %}
+												<option value="{{ lot.id }}">{{ lot.name }}</option>
+											{% endfor %}
 										</select>
 									</div>
 									<br />
