map.html update

--- a/genie/web/templates/web/map.html
+++ b/genie/web/templates/web/map.html
@@ -42,8 +42,8 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Available Lots for {{Event}}</h2>
-						<p>{{Event Description}}</p>
+						<h2>Available Lots for 1</h2>
+						<p>add event info</p>
 					</header>
 					<div class="box">
 						<h3>Map to display below</h3>
